# demo-wallet

./: .env.example  .gitignore  Cargo.toml  Makefile  NOTICE.md  README.md  convert.ts  index.ts  justfile  package.json  pnpm-lock.yaml  tsconfig.json  types.ts
.github/workflows/: ci.yaml
docs/: all.html  constant.ACCOUNT_MAX.html  constant.METADATA_FILE.html  constant.PASSWORD_LENGTH.html  constant.SCRYPT_LOG_N.html  constant.SCRYPT_P.html  constant.SCRYPT_R.html  constant.WALLET_DIR.html  constant.WALLET_FILE.html  crates.js  docs.rs  fn.change_password.html  fn.check_wallet_exists.html  fn.check_wallet_not_found.html  fn.decrypt_mnemonic.html  fn.delete_wallet.html  fn.derive_all_addresses.html  fn.derive_bitcoin_addresses.html  fn.derive_ethereum_address.html  fn.derive_multiple_accounts.html  fn.derive_solana_address.html  fn.display_addresses.html  fn.encrypt_mnemonic.html  fn.export_mnemonic.html  fn.export_private_key.html  fn.generate_qr_code.html  fn.generate_wallet.html  fn.get_metadata_file.html  fn.get_wallet_dir.html  fn.get_wallet_file.html  fn.load_metadata.html  fn.main.html  fn.restore_wallet.html  fn.save_metadata.html  fn.show_wallet.html  fn.update_metadata.html  fn.validate_account_index.html  fn.validate_password.html  fn.verify_wallet.html  fn.wallet_exists.html  (+9 more)
docs/commands/: enum.Commands.html  fn.execute_command.html  index.html  sidebar-items.js
docs/convert/: fn.run_convert.html  index.html  sidebar-items.js
docs/search.index/: 024140e442fc.js  0a34788a86d0.js  0a54a9bf6c71.js  1184d21ef0ba.js  175e95bc6857.js  1d0e95a9e649.js  32a5169b01fe.js  38c62d6d8c95.js  3ef8197415a3.js  418564e9f31d.js  45f031ce8f2d.js  4d292134e765.js  5d49ca9044c1.js  5eeaecc054a3.js  63f7579465ad.js  6cedbcc7098a.js  root.js
docs/search.index/crateNames/: b3bb029b2515.js
docs/search.index/desc/: 78c6cb6f5045.js
docs/search.index/entry/: 5a5a4b1d35c4.js
docs/search.index/function/: eebc88eb4eb9.js
docs/search.index/generic_inverted_index/: 652648f956ab.js
docs/search.index/name/: bc9af18c31b4.js
docs/search.index/normalizedName/: e3e1ee779fef.js
docs/search.index/path/: 56a682f33596.js
docs/search.index/type/: b807b8ded802.js
docs/src/demo_wallet/: commands.rs.html  convert.rs.html  main.rs.html  types.rs.html
docs/static.files/: main-6dc2a7f3.js  normalize-9960930a.css  noscript-263c88ec.css  noscript-263c88ec.html  rustdoc-e56847b5.css
docs/trait.impl/core/clone/: trait.Clone.js
docs/types/: index.html  sidebar-items.js  struct.Addresses.html  struct.BitcoinAddresses.html  struct.EncryptedWallet.html  struct.Metadata.html  struct.SecureMnemonic.html  struct.SecureSeed.html
src/: commands.rs  constants.rs  convert.rs  crypto.rs  derive.rs  gui.rs  lib.rs  main.rs  ops.rs  types.rs  utils.rs  wallet.rs
src/gui/: app.rs  mod.rs  state.rs
src/gui/handlers/: core.rs  mod.rs  results.rs
src/gui/tabs/: convert.rs  derive.rs  export.rs  generate.rs  mod.rs  overview.rs  restore.rs  settings.rs  show.rs
src/gui/ui/: menu.rs  mod.rs  sidebar.rs  status.rs
(+14 files in other folders)
