[package]
name = "demo-wallet"
description = "Example crypto wallet for offline key management and cold storage."
authors = ["bd53"]
version = "0.32.5"
license = "MIT"
repository = "https://github.com/bd53/demo-wallet"
edition = "2021"

[dependencies]
aes-gcm = "0.11.0-rc.1"
bitcoin = "0.32.7"
bs58 = "0.4"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
generic-array = "0.14"
get_if_addrs = "0.5.3"
hex = "0.4"
qrcode = "0.14"
rand = "0.9"
scrypt = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-sdk = "1.18.26"
tiny-bip39 = "0.8.2"
tiny-hderive = "0.3.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
zeroize = "1.3"

syn = { version = "2.0", features = ["full"] }
walkdir = "2.5"
tera = "1.20"
quote = "1.0.41"

[[bin]]
name = "docs"
path = "docs/docs.rs"
