[package]
name = "demo-wallet"
description = "Example crypto wallet for offline key management and cold storage."
authors = ["bd53"]
version = "0.32.5"
license = "MIT"
repository = "https://github.com/bd53/demo-wallet"
edition = "2024"

default-run = "demo-wallet"

[dependencies]
aes-gcm = "0.10.3"
bip32 = "0.5"
bitcoin = "0.32.7"
blahaj = "0.6.0"
bs58 = "0.5.1"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0.0"
generic-array = "1.3.5"
get_if_addrs = "0.5.3"
hex = "0.4"
k256 = "0.13"
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }
qrcode = "0.14"
quote = "1.0.41"
rand = "0.9"
scrypt = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-sdk = "3.0.0"
syn = { version = "2.0", features = ["full"] }
tera = "1.20"
tiny-bip39 = "2.0.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
walkdir = "2.5"
zeroize = "1.8.2"

[[bin]]
name = "docs"
path = "docs/generate.rs"
