[package]
name = "cws"
description = "Example crypto wallet for offline key management and cold storage."
authors = ["bd53"]
version = "0.33.13"
license = "MIT"
repository = "https://github.com/bd53/cws"
edition = "2021"
categories = ["command-line-utilities", "finance"]
keywords = ["blockchain", "cli", "gui", "storage", "utility"]
default-run = "cws"

[lib]
name = "cws"
path = "src/lib.rs"

[[bin]]
name = "cws"
path = "src/main.rs"

[dependencies]
aes-gcm = "0.10.3"
bip32 = "0.5"
bitcoin = "0.32.7"
blahaj = "0.6.0"
bs58 = "0.5.1"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0.0"
eframe = "0.29"
egui = "0.29"
hex = "0.4"
image = "0.25.8"
k256 = "0.13"
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }
qrcode = "0.14"
rand = "0.9"
scrypt = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-sdk = "3.0.0"
syn = { version = "2.0", features = ["full"] }
tiny-bip39 = "2.0.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
zeroize = "1.8.2"

[package.metadata.docs.rs]
all-features = true
